scrollbar fix

--- a/src/components/Sections/Section1.css
+++ b/src/components/Sections/Section1.css
@@ -20,7 +20,7 @@
     letter-spacing: 0.01em;
     text-align: left;
     color: #FFFFFF;
-    width: 40%;
+    width: 35%;
     left: 802px;
     top: 333px;
 }
