--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-width: max-content;
- 
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
-
+body::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
